--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator/
+management.endpoints.enabled-by-default=true
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.health.db.enabled=false
+management.health.diskspace.enabled=true
